--- a/ranking.html
+++ b/ranking.html
@@ -37,7 +37,7 @@
         </article>
     </section>
     <footer>
-        <h1>Footer</h1>
+        <h1>DERECHOS RESERVADOS 2024</h1>
     </footer>
     <script>
         document.querySelector('.nav-toggle').addEventListener('click', () => {
