Actualizar form-inscription.html

--- a/pages/form-inscription.html
+++ b/pages/form-inscription.html
@@ -273,7 +273,7 @@ body {
                     <li><a href="/ranking.html">RANKING</a></li>
                     <li><a href="/torneos.html">TORNEOS</a></li>
                     <li><a href="/reglamento.html">REGLAMENTO</a></li>
-                    <li><a href="/contacto.html">CONTACTO</a></li>
+                    <li><a href="https://clashkill.github.io/federacionmendocina/ranking.html">CONTACTO</a></li>
                 </ul>
             </nav>
         </div>
