Actualizar form-inscription.html

--- a/pages/form-inscription.html
+++ b/pages/form-inscription.html
@@ -270,10 +270,10 @@ body {
             </button>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="/ranking.html">RANKING</a></li>
-                    <li><a href="/torneos.html">TORNEOS</a></li>
+                    <li><a href="https://clashkill.github.io/federacionmendocina/ranking.html">RANKING</a></li>
+                    <li><a href="https://clashkill.github.io/federacionmendocina/torneos.html">TORNEOS</a></li>
                     <li><a href="/reglamento.html">REGLAMENTO</a></li>
-                    <li><a href="https://clashkill.github.io/federacionmendocina/ranking.html">CONTACTO</a></li>
+                    <li><a href="https://clashkill.github.io/federacionmendocina/contacto.html">CONTACTO</a></li>
                 </ul>
             </nav>
         </div>
