--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="nav-bar">
-            <a href="index.html"><img src="/img/logo-fmtm-main.jpg" alt="LogoFmtmt" class="nav-item-img"></a>
+            <a href="index.html"><img src="img/logo-fmtm-main.jpg" alt="LogoFmtmt" class="nav-item-img"></a>
             <a href="ranking.html" class="nav-item">RANKING</a>
             <a href="torneos.html" class="nav-item">TORNEOS</a>
             <a href="reglamento.html" class="nav-item">REGLAMENTO</a>
