--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <header>
         <div class="nav-bar">
             <a href="index.html"><img src="img/logo-fmtm-main.jpg" alt="LogoFmtmt" class="nav-item-img"></a>
-            <a href="ranking.html" class="nav-item">RANKING</a>
-            <a href="torneos.html" class="nav-item">TORNEOS</a>
-            <a href="reglamento.html" class="nav-item">REGLAMENTO</a>
-            <a href="contacto.html" class="nav-item">CONTACTO</a>
+            <button class="nav-toggle" id="nav-toggle">&#9776;</button>
+            <nav class="nav-menu" id="nav-menu">
+                <a href="ranking.html" class="nav-item">RANKING</a>
+                <a href="torneos.html" class="nav-item">TORNEOS</a>
+                <a href="reglamento.html" class="nav-item">REGLAMENTO</a>
+                <a href="contacto.html" class="nav-item">CONTACTO</a>
+            </nav>
         </div>    
     </header>
     <div class="image">
@@ -34,5 +37,11 @@
             </article>
         </section>
     </main>
+    <script>
+        document.getElementById('nav-toggle').addEventListener('click', function() {
+            var navMenu = document.getElementById('nav-menu');
+            navMenu.classList.toggle('nav-menu-visible');
+        });
+    </script>
 </body>
 </html>
