--- a/index.html
+++ b/index.html
@@ -37,11 +37,6 @@
             </article>
         </section>
     </main>
-    <script>
-        document.getElementById('nav-toggle').addEventListener('click', function() {
-            var navMenu = document.getElementById('nav-menu');
-            navMenu.classList.toggle('nav-menu-visible');
-        });
-    </script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
