--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/logo-fmtm-2.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="img/logo-fmtm-2.jpg">
+    <link rel="icon" href="img/logo-fmtm-2.ico">
     <title>FEDERACION MENDOCINA DE TENIS DE MESA</title>
 </head>
 <body>
     <header>
         <div class="nav-bar">
             <a href="index.html"><img src="img/logo-fmtm-main.jpg" alt="LogoFmtmt" class="nav-item-img"></a>
-            <button class="nav-toggle" id="nav-toggle">&#9776;</button>
-            <nav class="nav-menu" id="nav-menu">
+            <span class="nav-toggle">&#9776;</span>
+            <div class="nav-menu">
                 <a href="ranking.html" class="nav-item">RANKING</a>
                 <a href="torneos.html" class="nav-item">TORNEOS</a>
                 <a href="reglamento.html" class="nav-item">REGLAMENTO</a>
                 <a href="contacto.html" class="nav-item">CONTACTO</a>
-            </nav>
+            </div>
         </div>    
     </header>
     <div class="image">
@@ -37,6 +36,9 @@
             </article>
         </section>
     </main>
+    <footer>
+        <h1>DERECHOS RESERVADOS 2024</h1>
+    </footer>
     <script src="js/scripts.js"></script>
 </body>
 </html>
