--- a/pages/tournament.html
+++ b/pages/tournament.html
@@ -146,7 +146,7 @@ aside > a:hover {
         <a href="inscriptos.html">INSCRIPTOS <span class="timer-container"><span class="label">Disponible en</span><span id="timer-inscriptos" class="timer"></span></span></a>
         <a href="zonas.html">ZONAS <span class="timer-container"><span class="label">Disponible en</span><span id="timer-zonas" class="timer"></span></span></a>
         <a href="resultados.html">RESULTADOS <span class="timer-container"><span class="label">Disponible en</span><span id="timer-resultados" class="timer"></span></span></a>
-        <a href="resultados.html">RESULTADOS <span class="timer-container"><span class="label">Disponible en</span><span id="timer-cronograma" class="timer"></span></span></a>
+        <a href="resultados.html">CRONOGRAMA <span class="timer-container"><span class="label">Disponible en</span><span id="timer-cronograma" class="timer"></span></span></a>
     </aside>
     <main>
         <!-- Contenido principal de la página -->
