--- a/reglamento.html
+++ b/reglamento.html
@@ -11,7 +11,7 @@
     <header>
         <div class="nav-bar">
             <a href="index.html"><img src="img/logo-fmtm-main.jpg" alt="LogoFmtmt" class="nav-item-img"></a>
-            <span class="nav-toggle" onclick="toggleMenu()">&#9776;</span>
+            <span class="nav-toggle" onclick="toggleMenu()">Menú</span>
             <div class="nav-menu">
                 <a href="ranking.html" class="nav-item">RANKING</a>
                 <a href="torneos.html" class="nav-item">TORNEOS</a>
@@ -27,10 +27,10 @@
             <p>A continuación puedes descargar los reglamentos en formato PDF de distintos años:</p>
             <ul>
                 <li><a href="/assets/reglamento2024.pdf" download="Reglamento FMTM Competencias 2024" target="_blank">Reglamento 2024</a></li>
-        <!-- <li><a href="reglamentos/reglamento_2022.pdf" target="_blank">Reglamento 2022</a></li>
+                <!-- <li><a href="reglamentos/reglamento_2022.pdf" target="_blank">Reglamento 2022</a></li>
                 <li><a href="reglamentos/reglamento_2021.pdf" target="_blank">Reglamento 2021</a></li>
                 <li><a href="reglamentos/reglamento_2020.pdf" target="_blank">Reglamento 2020</a></li>
-                <li><a href="reglamentos/reglamento_2019.pdf" target="_blank">Reglamento 2019</a></li>-->
+                <li><a href="reglamentos/reglamento_2019.pdf" target="_blank">Reglamento 2019</a></li> -->
             </ul>
         </article>
     </section>
