--- a/reglamento.html
+++ b/reglamento.html
@@ -26,7 +26,7 @@
             <h2>Reglamentos de Torneos</h2>
             <p>A continuación puedes descargar los reglamentos en formato PDF de distintos años:</p>
             <ul>
-                <li><a href="/assets/reglamento2024.pdf" download="Reglamento FMTM Competencias 2024" target="_blank">Reglamento 2024</a></li>
+                <li><a href="assets/reglamento2024.pdf" download="Reglamento FMTM Competencias 2024" target="_blank">Reglamento 2024</a></li>
                 <!-- <li><a href="reglamentos/reglamento_2022.pdf" target="_blank">Reglamento 2022</a></li>
                 <li><a href="reglamentos/reglamento_2021.pdf" target="_blank">Reglamento 2021</a></li>
                 <li><a href="reglamentos/reglamento_2020.pdf" target="_blank">Reglamento 2020</a></li>
