--- a/pages/tournament.html
+++ b/pages/tournament.html
@@ -135,10 +135,10 @@ aside > a:hover {
         <div class="nav-bar">
             <a href="/index.html"><img src="/img/logo-fmtm-main.jpg" alt="LogoFmtmt" class="nav-item-img"></a>
             <a href="#" id="menu-toggle" class="nav-item">MENÚ</a>
-            <a href="/ranking.html" class="nav-item">RANKING</a>
-            <a href="/torneos.html" class="nav-item">TORNEOS</a>
-            <a href="/reglamento.html" class="nav-item">REGLAMENTO</a>
-            <a href="/contacto.html" class="nav-item">CONTACTO</a>
+            <a href="https://clashkill.github.io/federacionmendocina/ranking.html" class="nav-item">RANKING</a>
+            <a href="https://clashkill.github.io/federacionmendocina/torneos.html" class="nav-item">TORNEOS</a>
+            <a href="https://clashkill.github.io/federacionmendocina/reglamento.html" class="nav-item">REGLAMENTO</a>
+            <a href="https://clashkill.github.io/federacionmendocina/contacto.html" class="nav-item">CONTACTO</a>
         </div>    
     </header>
     <aside class="aside-menu">
