--- a/pages/form-inscription.html
+++ b/pages/form-inscription.html
@@ -272,7 +272,7 @@ body {
                 <ul class="nav-links">
                     <li><a href="https://clashkill.github.io/federacionmendocina/ranking.html">RANKING</a></li>
                     <li><a href="https://clashkill.github.io/federacionmendocina/torneos.html">TORNEOS</a></li>
-                    <li><a href="/reglamento.html">REGLAMENTO</a></li>
+                    <li><a href="https://clashkill.github.io/federacionmendocina/reglamento.html">REGLAMENTO</a></li>
                     <li><a href="https://clashkill.github.io/federacionmendocina/contacto.html">CONTACTO</a></li>
                 </ul>
             </nav>
