--- a/pages/tournament.html
+++ b/pages/tournament.html
@@ -133,7 +133,7 @@ aside > a:hover {
 <body>
     <header>
         <div class="nav-bar">
-            <a href="/index.html"><img src="/img/logo-fmtm-main.jpg" alt="LogoFmtmt" class="nav-item-img"></a>
+            <a href="https://clashkill.github.io/federacionmendocina/index.html"><img src="/img/logo-fmtm-main.jpg" alt="LogoFmtmt" class="nav-item-img"></a>
             <a href="#" id="menu-toggle" class="nav-item">MENÚ</a>
             <a href="https://clashkill.github.io/federacionmendocina/ranking.html" class="nav-item">RANKING</a>
             <a href="https://clashkill.github.io/federacionmendocina/torneos.html" class="nav-item">TORNEOS</a>
