--- a/pages/form-inscription.html
+++ b/pages/form-inscription.html
@@ -262,7 +262,7 @@ body {
 <body>
     <header>
         <div class="nav-bar">
-            <a href="index.html"><img src="/img/logo-fmtm-main.jpg" alt="LogoFmtmt" class="nav-item-img"></a>
+            <a href="https://clashkill.github.io/federacionmendocina/index.html"><img src="/img/logo-fmtm-main.jpg" alt="LogoFmtmt" class="nav-item-img"></a>
             <button class="nav-toggle">
                 <span class="hamburger"></span>
                 <span class="hamburger"></span>
